Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3456,100 +3456,3 @@ input, select, textarea {
     color: #555;
 }
 
-/* Tabs */
-.tabs {
-  position: relative;
-  min-height: 200px;
-  clear: both;
-  margin: 25px 0;
-  font-family: Arial, sans-serif;
-}
-.tabs input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-}
-.tabs label {
-  display: inline-block;
-  margin: 0 0 -1px;
-  padding: 15px 25px;
-  font-weight: 600;
-  text-align: center;
-  color: #757575;
-  border: 1px solid transparent;
-}
-.tabs label:hover {
-  color: #888;
-  cursor: pointer;
-}
-.tabs .content > section {
-  display: none;
-  padding: 20px 25px;
-  border-top: 1px solid #ddd;
-}
-.tabs input:checked + label {
-  color: #555;
-  border: 1px solid #ddd;
-  border-top: 2px solid #316ff6;
-  border-bottom: 1px solid #fff;
-}
-#tab1:checked ~ .content > section:nth-of-type(1),
-#tab2:checked ~ .content > section:nth-of-type(2),
-#tab3:checked ~ .content > section:nth-of-type(3),
-#tab4:checked ~ .content > section:nth-of-type(4) {
-  display: block;
-}
-
-.tabs .slider {
-  position: relative;
-  width: 100%;
-  height: 5px;
-  background: #ddd;
-  margin: 25px 0;
-}
-.tabs .slider .indicator {
-  position: absolute;
-  height: 100%;
-  width: 25%;
-  background: #316ff6;
-  transition: all 0.25s ease;
-}
-#tab1:checked ~ .slider .indicator {
-  left: 0%;
-}
-#tab2:checked ~ .slider .indicator {
-  left: 25%;
-}
-#tab3:checked ~ .slider .indicator {
-  left: 50%;
-}
-#tab4:checked ~ .slider .indicator {
-  left: 75%;
-}
-
-.skills-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 10px;
-}
-
-.skill {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 10px;
-  width: 100px;
-  height: 100px;
-}
-
-.skill img {
-  width: 50px;
-  height: 50px;
-  margin-bottom: 10px;
-}
-
-.skill span {
-  font-size: 14px;
-  color: #555;
-}
